[package]
name = "tokio-dbus"
version = "0.1.0"
edition = "2021"

[features]
default = ["libc", "tokio"]

[dependencies]
libc = { version = "0.2.150", optional = true }
tokio = { version = "1.34.0", optional = true, features = ["net"] }

[dev-dependencies]
bstr = "1.8.0"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
