[package]
name = "tokio-dbus"
version = "0.0.8"
rust-version = "1.66"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
description = """
Pure Rust D-Bus implementation for Tokio.
"""
documentation = "https://docs.rs/tokio-dbus"
readme = "README.md"
homepage = "https://github.com/udoprog/tokio-dbus"
repository = "https://github.com/udoprog/tokio-dbus"
license = "MIT OR Apache-2.0"
keywords = ["async", "d-bus", "dbus", "ipc", "tokio"]
categories = ["asynchronous", "os::unix-apis"]

[features]
default = ["libc", "tokio"]

[dependencies]
libc = { version = "0.2.150", optional = true }
tokio = { version = "1.34.0", optional = true, features = ["net"] }

[dev-dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }
